# pico_template

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ubuntu.yml
echo_i2c/: CMakeLists.txt  echo_i2c.cpp  echo_i2c.pch
echo_irq/: CMakeLists.txt  echo_irq.cpp  echo_irq.pch
echo_spi/: CMakeLists.txt  echo_spi.cpp  echo_spi.pch
echo_uart/: CMakeLists.txt  echo_uart.cpp  echo_uart.pch
hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.pch
